@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
- <version>4.0</version>
+ <version>4.6</version>
  <dependencies>
   <dependency>profile-eea.facetednavigation:default</dependency>
  </dependencies>
