@@ -1,6 +1,6 @@
 """ Base test cases
 """
-from Products.Five import zcml
+from Zope2.App import zcml
 from Products.Five import fiveconfigure
 from Products.PloneTestCase import PloneTestCase
 from Products.PloneTestCase.layer import onsetup
