@@ -3,6 +3,25 @@
   xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
   i18n_domain="eea">
 
+  <!-- 4.0 => 4.6 -->
+  <genericsetup:upgradeSteps
+    source="4.0"
+    destination="4.6"
+    profile="eea.relations:default">
+
+    <genericsetup:upgradeDepends
+      title="Import possible_relations step from eea.relations profile"
+      import_steps="possible_relations"
+      />
+
+    <genericsetup:upgradeStep
+      title="Reindex object_provides zCatalog index"
+      handler="eea.relations.upgrades.evolve46.reindexObjectProvides"
+      />
+
+  </genericsetup:upgradeSteps>
+
+  <!-- * => 4.0 -->
   <genericsetup:upgradeSteps
     source="*"
     destination="4.0"
